add more show routes
